logs/CVE-2018-14526_11_1/log-error
ndisc_snoop.c:57:6: error: redefinition of 'sta_ip6addr_del'
 void sta_ip6addr_del(struct hostapd_data *hapd, struct sta_info *sta)
      ^
In file included from ndisc_snoop.c:20:0:
ndisc_snoop.h:29:20: note: previous definition of 'sta_ip6addr_del' was here
 static inline void sta_ip6addr_del(struct hostapd_data *hapd,
                    ^
ndisc_snoop.c:167:5: error: redefinition of 'ndisc_snoop_init'
 int ndisc_snoop_init(struct hostapd_data *hapd)
     ^
In file included from ndisc_snoop.c:20:0:
ndisc_snoop.h:20:19: note: previous definition of 'ndisc_snoop_init' was here
 static inline int ndisc_snoop_init(struct hostapd_data *hapd)
                   ^
ndisc_snoop.c:182:6: error: redefinition of 'ndisc_snoop_deinit'
 void ndisc_snoop_deinit(struct hostapd_data *hapd)
      ^
In file included from ndisc_snoop.c:20:0:
ndisc_snoop.h:25:20: note: previous definition of 'ndisc_snoop_deinit' was here
 static inline void ndisc_snoop_deinit(struct hostapd_data *hapd)
                    ^
make[1]: *** [ndisc_snoop.o] Error 1
make[1]: *** Waiting for unfinished jobs....
